<resources>
    <string name="app_name">Child Safety App</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="others">Others</string>
    <string name="user_name">User Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_pin">Set pin</string>
    <string name="emergency_999">Emergency 999</string>
    <string name="find_hot_helplines">Find Hot Helplines</string>
    <string name="organization">Organization</string>
    <string name="select_date">Select Date</string>
    <string name="enterdate">enterDate</string>
    <string name="date">Date</string>
    <string name="enter_text">Enter text</string>
    <string name="enter_number">Enter number</string>
    <string name="gender">Gender</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="organisation">
        <item>UNECO</item>
        <item>SOS</item>
        <item>Good Samalitan</item>
        <item>DREAMS</item>
        <item>Amitof Care Center</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="website">Website</string>
    <string name="company_name">Organisation name</string>
    <string name="add_new_organisation">Add New Company</string>
    <string name="all_companies">All Companies</string>
    <string name="no_organisation_in_the_database_create_new_one_by_clicking_the_add_button_at_the_top_right">No organisation in the database. create new one by clicking the add button at the top right</string>
    <string name="empty_fields_message">One or more fields are empty</string>
    <string name="salary">Salary</string>
    <string name="all_children">All Employees</string>
    <string name="no_child_working_for_this_company_add_a_new_one_by_clicking_the_add_button_on_the_top_right">No child supported by this organisation. Add a new one by clicking the add button on the top right</string>
    <string name="add_new_employee">Add New Child</string>
    <string name="select_a_company">Select a Organisation</string>
    <string name="delete">Delete</string>
    <string name="organisation_deleted_successfully">Organisation deleted successfully</string>
    <string name="child_deleted_successfully">Child deleted successfully</string>
    <string name="all_organisations">All Organisations</string>
    <string name="contact_number">contact number</string>
    <string name="child_safety">Child Safety</string>
    <string name="physical_address">Physical address</string>
    <string name="guardian_name">Guardian name</string>
</resources>