<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".AddChildActivity">

    <EditText
        android:id="@+id/txt_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/first_name"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/txt_first_name"
        android:hint="@string/last_name"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_guardian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_last_name"
        android:layout_marginTop="8dp"
        android:hint="@string/address"
        android:inputType="text"
        android:lines="2"
        android:maxLines="2"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_physical_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_guardian"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_physical_address"
        android:layout_marginTop="8dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_datepiker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_phone_number"
        android:layout_marginTop="8dp"
        android:hint="@string/date"
        android:focusable="false"
        android:inputType="date"
        android:onClick="openDatePickers"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <Spinner
        android:id="@+id/spinner_companies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_datepiker"
        android:layout_marginTop="8dp"
        android:prompt="@string/select_a_company"
        android:animateLayoutChanges="true"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_companies"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingBottom="2dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="2dp"
        android:text="@string/add"
        android:textAppearance="?android:attr/textAppearanceMedium" />


</RelativeLayout>