<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorBlue"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/steal_blue"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"/>
        </LinearLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colorRed">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/emergency_999"
                android:textColor="@color/white"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:layout_marginLeft="100dp"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/emergency"
                android:contentDescription="@string/app_name"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="80dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/_10sdp">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardHeader"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            app:cardBackgroundColor="@color/card_background"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="6dp"
            android:elevation="4dp"
            android:layout_margin="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_14sdp">

                <TextView
                    android:id="@+id/textViews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_hot_helplines"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_imagebutton"
                    android:src="@drawable/ic_arrow_forward"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/_10sdp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/secondCard"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                app:cardBackgroundColor="@color/card_background"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="6dp"
                android:elevation="4dp"
                android:layout_margin="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_14sdp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Find Victims Service Provider"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <ImageView
                        android:id="@+id/imageview2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_forward"
                        android:background="@drawable/rounded_imagebutton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </LinearLayout>





    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>